# discrimination

./: .gitignore  .hlint.yaml  .travis.yml  CHANGELOG.markdown  Data-Discrimination-Class.html  Data-Discrimination-Combinators.html  Data-Discrimination-Generic.html  Data-Discrimination-Grouping.html  Data-Discrimination-Internal.html  Data-Discrimination-Join.html  Data-Discrimination-Sorting.html  Data-Discrimination-Table.html  Data-Discrimination-Type.html  Data-Discrimination.html  LICENSE  README.markdown  amt.html  cabal.haskell-ci  cabal.project  discrimination.cabal  discrimination.haddock  discrimination.txt  doc-index.html  index-frames.html  index.html  mini_Data-Discrimination-Class.html  mini_Data-Discrimination-Combinators.html  mini_Data-Discrimination-Generic.html  mini_Data-Discrimination-Grouping.html  mini_Data-Discrimination-Internal.html  mini_Data-Discrimination-Join.html  mini_Data-Discrimination-Sorting.html  mini_Data-Discrimination-Table.html  mini_Data-Discrimination-Type.html  mini_Data-Discrimination.html
.github/workflows/: haskell-ci.yml
benchmarks/: AMT.hs  SmallArray.hs  StrictSmallArray.hs  examples.hs  wordmap.hs
cbits/: disc.c  disc.h  prim.cmm
common/: Utils.hs
src/: Data-Discrimination-Class.html  Data-Discrimination-Combinators.html  Data-Discrimination-Generic.html  Data-Discrimination-Grouping.html  Data-Discrimination-Internal.html  Data-Discrimination-Join.html  Data-Discrimination-Sorting.html  Data-Discrimination-Table.html  Data-Discrimination-Type.html  Data-Discrimination.html
src/Data/: Discrimination.hs
src/Data/Discrimination/: Class.hs  Combinators.hs  Discriminating.hs  Disorder.hs  Generic.hs  Grouping.hs  Internal.hs  Join.hs  Key.hs  Order.hs  Ordered.hs  Sorting.hs  Table.hs  Type.hs  Unordered.hs
src/Data/Discrimination/Internal/: SmallArray.hs  WordMap.hs
test/: tests.hs
wip/: AMT.hs  Demand.hs  IVar.hs  Lazy.hs  Online.hs  amt.html
