name:          discrimination
category:      Data, Sorting
version:       0
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/discrimination/
bug-reports:   http://github.com/ekmett/discrimination/issues
copyright:     Copyright (C) 2014-2015 Edward A. Kmett
build-type:    Simple
tested-with:   GHC == 7.8.4
synopsis:      Fast generic linear-time discrimination and sorting
description:
  This package provides fast, generic, linear-time discrimination and sorting.
  .
  The techniques applied are based on <http://www.diku.dk/hjemmesider/ansatte/henglein/papers/henglein2011a.pdf multiple> <http://www.diku.dk/hjemmesider/ansatte/henglein/papers/henglein2011c.pdf papers> and <https://www.youtube.com/watch?v=sz9ZlZIRDAg talks> by <http://www.diku.dk/hjemmesider/ansatte/henglein/ Fritz Henglein>.

extra-source-files:
  .gitignore
  README.markdown
  CHANGELOG.markdown
  HLint.hs

source-repository head
  type: git
  location: git://github.com/ekmett/discrimination.git

library
  default-language: Haskell2010
  ghc-options: -Wall -O2
  hs-source-dirs: src
  -- c-sources: cbits/prim.cmm
  exposed-modules:
    Data.Discrimination
    Data.Discrimination.Class
    Data.Discrimination.Grouping
    Data.Discrimination.Internal
    Data.Discrimination.Sorting

  build-depends:
    adjunctions,
    array,
    base >= 4.7 && < 5,
    bytestring,
    containers,
    contravariant >= 1.3.1,
    data-default,
    deepseq < 1.5,
    ghc-prim,
    profunctors >= 4.4 && < 5,
    primitive,
    semigroups >= 0.16.2,
    text,
    transformers,
    vector,
    void
